--- a/src/citra_qt/main.ui
+++ b/src/citra_qt/main.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>../dist/citra.ico</normaloff>../dist/citra.ico</iconset>
+    <normaloff>dist/citra.ico</normaloff>dist/citra.ico</iconset>
   </property>
   <property name="tabShape">
    <enum>QTabWidget::Rounded</enum>
